# nap

./: .gitignore  CMakeLists.txt  app.json  cached_project_json.cmake  changelog.md  clone_4dsound.sh  config.json  create_version.sh  generate_solution.sh  git.sh  package_4dsound.sh  package_app.sh  project.json  remove_version.sh  signing_order.py
.ini/: imguiservice_window.ini  renderservice.ini
audioplugins/ExampleAudioPlugin/: CMakeLists.txt  PluginProcessor.cpp  app.json  project.json
audioplugins/ExampleAudioPlugin/data/: objects.json
audioplugins/napstatic/: CMakeLists.txt  macros_and_functions.cmake
audioplugins/napstatic/src/: napstatic.cpp  napstatic.h
audioplugins/test/: CMakeLists.txt  main.cpp
audioplugins/test/data/: objects.json
cmake/: nap_app.cmake  nap_static.cmake  nap_utilities.cmake  setup.cmake
core/src/nap/: core.cpp  core.h  resourcemanager.cpp  resourcemanager.h
data/: app_structure.json  config.json  imgui.ini  settings.json  speaker-omni.fbx  speaker-omni.mesh
data/binaural/: License.txt  cipic.grid
data/crsd/: Cube.crsd  Dodecahedron.crsd  Icosahedron.crsd  Octahedron.crsd  Tetrahedron.crsd
data/dsp/: binauralMasterChain.dsp  freeverb.dsp  highpass.dsp  lowpass.dsp  satellitechain.dsp  subchain.dsp
data/faust/loki/: SafeFormat.h
data/scripts/: environment.py  environmentSettings.py  master.py  stresstest.py
data/scripts/examples/: exampleDeform.py  examplePrecalculatedShape.py  exampleShape.py  exampleTransformation.py
data/scripts/shapes/: precalculatedGoldbergSphere.py  precalculatedPyramid.py  precalculatedVesicaEye2D.py  precalculatedVesicaEye3D.py  testLineShape.py
data/setups/: Cube 8.2.xml  Cube.xml  Grid 4x3x4, 3x3.xml  Hexadecagon.xml  Hexagon.xml  Lobe.xml  Monom.xml  Octagon.xml  Quad With Sub.xml  Quad.xml  SSI60setup.xml  SSI75setup.xml  SSIsetup.xml  setupmerkabahordered.xml  setupmerkabahsphere.xml  setupmerkabahtiltedcube.xml  testsetup.xml
data/shaders/: font.frag  font.vert  texture.frag
data/shaders/monitor/: anchor.vert  billboard.frag  billboard.vert  boxframe.frag  boxframe.vert  cloud.frag  cloud.vert  flame.frag  flame.vert  grid.frag  grid.vert  halo.frag  halo.vert  lighting.frag  lighting.vert  line.vert  lines.frag  lines.vert  particle.frag  particle.vert  planecloud.frag  planecloud.vert  point.frag  point.vert  pointcloud.frag  pointcloud.vert  shapeplanecloud.vert  shapepointcloud.vert  solid.frag  solid.vert  speaker-lit.frag  speaker-lit.vert  speaker.frag  speaker.vert
demos/parameterrecording/: app.json
macos/: Info.plist
src/: 4dsoundapp.cpp  4dsoundapp.h  GuiStyle.cpp  GuiStyle.h  main.cpp
(+41 files in other folders)
